--- a/styles.css
+++ b/styles.css
@@ -94,13 +94,14 @@ h3 {
     main{
         grid-template-columns: 1fr repeat(2, 0.5fr) 1fr;
         grid-template-rows: repeat(2, 1fr);
-        padding: 2rem;
+        padding: 5rem;
         height: 80vh;
     }
 
     h1{
         font-size: 2.9rem;
         text-align: left;
+        margin: 0 0 2rem 0;
     }
 
     .title p{
