--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ main{
 
 h1 {
     color: hsl(300, 43%, 22%);
-    margin: 3rem 0 0 0;
+    margin: 3rem 0 2rem 0;
 }
 
 h2 {
@@ -99,9 +99,13 @@ h3 {
     }
 
     h1{
-        font-size: 2.9rem;
+        font-size: 3rem;
         text-align: left;
         margin: 0 0 2rem 0;
+    }
+
+    h2{
+        margin: 0;
     }
 
     .title p{
