--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ p{
 .reviews span {
     color: hsl(333, 80%, 67%);
 }
+
 .reviews img{
     width: 3rem;
     border-radius: 50%;
@@ -101,7 +102,7 @@ h3 {
     h1{
         font-size: 3rem;
         text-align: left;
-        margin: 0 0 2rem 0;
+        margin: 0 0 1rem 0;
     }
 
     h2{
@@ -126,6 +127,8 @@ h3 {
         align-items: center;
         justify-content: center;
         gap: 1rem;
+        margin: 0;
+        height: 70%;
     }
 
     .rate.item2{
