--- a/styles.css
+++ b/styles.css
@@ -95,14 +95,16 @@ h3 {
     main{
         grid-template-columns: 1fr repeat(2, 0.5fr) 1fr;
         grid-template-rows: repeat(2, 1fr);
-        padding: 5rem;
+        max-width: 1450px;
+        padding: 10rem;
         height: 80vh;
+        row-gap: 4rem;
     }
 
     h1{
         font-size: 3rem;
         text-align: left;
-        margin: 0 0 1rem 0;
+        margin: 0 -2rem 1rem 0;
     }
 
     h2{
@@ -141,7 +143,6 @@ h3 {
 
     .reviews{
         grid-row: 2;
-        
     }
 
     .reviews.one{
