--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,21 @@ h3 {
     margin-top: 2rem;
 }
 
-@media (min-width: 376px){
+@media (max-width: 1140px){
+    body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    main{
+        width: 80%;
+        align-items: center;
+
+    }
+    
+}
+
+@media (min-width: 1140px){
 
     body{
         background-image: url(./images/bg-pattern-top-mobile.svg), url(./images/bg-pattern-bottom-desktop.svg);
